compiler/testData/diagnostics/tests/inference/kt11963.fir.kt
val <T : <!OTHER_ERROR!>KClass<T>.something<!>> abc